--- a/rebar.config
+++ b/rebar.config
@@ -30,8 +30,7 @@
     warn_exported_vars
 ]}.
 
-{deps, [ {ssl_verify_fun, {git, "https://github.com/deadtrickster/ssl_verify_fun.erl.git", {tag, "1.1.4"}}}
-       , {snabbkaffe, {git, "https://github.com/kafka4beam/snabbkaffe", {tag, "0.15.0"}}}
+{deps, [ {snabbkaffe, {git, "https://github.com/kafka4beam/snabbkaffe", {tag, "0.15.0"}}}
        ]}.
 
 {profiles, [
