fix(config): Make config flat (simplify job for cuttlefish)

--- a/test/gen_rpc.slave.config
+++ b/test/gen_rpc.slave.config
@@ -1,4 +1,4 @@
-%%% -*-mode:erlang;coding:utf-8;tabidth,:4;c-basic-offset:4;indent-tabs-mode:()-*-
+%%% -*-mode:erlang;coding:utf-8;tabwidth,:4;c-basic-offset:4;indent-tabs-mode:()-*-
 %%% ex: set ft=erlang fenc=utf-8 sts=4 ts=4 sw=4 et:
 %%%
 [
