fix: use https to fetch sync.git to make CI pass

--- a/rebar.config
+++ b/rebar.config
@@ -49,7 +49,7 @@
             warnings_as_errors,
             no_inline_list_funcs]},
         {deps, [
-            {sync, {git, "git://github.com/rustyio/sync.git", {branch, "master"}}}
+            {sync, {git, "https://github.com/rustyio/sync.git", {branch, "master"}}}
         ]}
     ]}
 ]}.
