--- a/rebar.config
+++ b/rebar.config
@@ -30,7 +30,7 @@
     warn_exported_vars
 ]}.
 
-{deps, [ {snabbkaffe, {git, "https://github.com/kafka4beam/snabbkaffe", {tag, "0.15.0"}}}
+{deps, [ {snabbkaffe, {git, "https://github.com/kafka4beam/snabbkaffe.git", {tag, "1.0.3"}}}
        ]}.
 
 {profiles, [
